@@ -102,22 +102,36 @@ public class SecurityConfiguration {
 
 
     // (8)
+//    @Bean
+//    CorsConfigurationSource corsConfigurationSource() {
+//        CorsConfiguration configuration = new CorsConfiguration();
+//        configuration.setAllowedOrigins(Arrays.asList("*", "http://localhost:5173",
+//                "ec2-54-180-18-106.ap-northeast-2.compute.amazonaws.com:8080",
+//                "whosebook-client.s3-website.ap-northeast-2.amazonaws.com/",
+//                "https://c68b-222-110-54-74.ngrok-free.app/oauth2/authorization/google"));
+//        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "DELETE", "OPTIONS"));
+//        configuration.setAllowedHeaders(Arrays.asList("*"));
+//        configuration.addExposedHeader("Authorization");
+//        configuration.addExposedHeader("Refresh");
+//        configuration.addExposedHeader("Location");
+//
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", configuration);
+//
+//
+//        return source;
+//    }
+
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*", "http://localhost:5173", "http://localhost:3000", "http://localhost:3001",
-                "ec2-54-180-18-106.ap-northeast-2.compute.amazonaws.com:8080","whosebook-client.s3-website.ap-northeast-2.amazonaws.com/",
-                "https://c68b-222-110-54-74.ngrok-free.app/oauth2/authorization/google"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.addExposedHeader("Authorization");
-        configuration.addExposedHeader("Refresh");
-        configuration.addExposedHeader("Location");
+        configuration.setAllowedOrigins(Arrays.asList("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET","POST", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("*")); // 클라이언트에서 요청할 때 허용할 요청 헤더 설정
+        configuration.setExposedHeaders(Arrays.asList("*")); // 클라이언트로 노출할 응답 헤더 설정
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-
-
         return source;
     }
 
